# call-transcriber

./: .env.example  .gitignore  CHEATSHEET.md  Kanban.md  LLM_CONTEXT.md  README.md  pyproject.toml
.gemini/: settings.json
.gemini/agents/: call_action_auditor.md  call_metadata_auditor.md
scripts/: archive_old_calls.py  process_call.ps1  process_call.py  prompt_riassunto_call.md  rebuild_indexes.ps1  rebuild_indexes.py  register_startup_task.ps1  run_watcher_task.ps1  settings.py  start_watcher.cmd  summarize_with_claude.ps1  summarize_with_codex.ps1  summarize_with_gemini.ps1  transcribe_with_groq.ps1  transcribe_with_groq.py  update_project_kanban.py  watch_calls.ps1  watch_calls.py
scripts/audio/: ffmpeg.py
scripts/llm/: common.ps1  common.py
scripts/llm/providers/: base.py  claude.ps1  claude.py  codex.ps1  codex.py  copilot.py  gemini.ps1  gemini.py
scripts/obsidian/: frontmatter.py  indexes.py  kanban.py
