[project]
name = "call-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "groq",
    "watchdog",
    "python-frontmatter",
    "typer",
    "pyyaml",
    "python-dotenv",
]

[project.scripts]
process-call    = "scripts.process_call:main"
watch-calls     = "scripts.watch_calls:main"
rebuild-indexes = "scripts.rebuild_indexes:main"
archive-calls   = "scripts.archive_old_calls:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]
